testsuite/tests/typecheck/should_fail/T14048b.stderr

T14048b.hs:7:1: error:
    • Kind signature on data type declaration has non-*
      and non-variable return kind
        Constraint
    • In the data family declaration for ‘Foo’
